# whatsapp-sender

./: .env.exemplo  .gitignore  Dockerfile  README.md  docker-compose.yml  principal.py  pyproject.toml
aplicacao/: __init__.py  cliente_supabase.py  cliente_zapi.py  configuracao.py  modelos.py
tests/: test_cliente_zapi.py  test_modelos.py
