[project]
name = "whatsapp-sender"
version = "0.1.0"
description = "Envio de mensagens WhatsApp via Z-API com contatos do Supabase"
requires-python = ">=3.9"
dependencies = [
    "supabase>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
]
